--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
   font-family: sans-serif;
 }
 
+
+
 a {
   text-decoration: none;
   color: white;
@@ -42,10 +44,12 @@ h1 {
   margin-top: 2em;
 }
 
-.map-1 {
+div {
   background-color: bisque;
   display: inline-block;
-  margin-left: 40%;
+  align-items: center;
+  align-self: center;
+  margin-left: 10%;
   margin-top: 7vh;
   padding: 2vh;
   border-radius: 14px;
